UX + technical quality pass: reliability, conversion, trust, and responsiveness

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dropx-agent-website</title>
+    <meta name="description" content="DropX Agent helps Nigeria-focused individuals and businesses automate dispatch, routing, and delivery operations." />
+    <title>DropX Agent</title>
   </head>
   <body>
     <div id="root"></div>
